<resources>
    <string name="app_name">Alcool ou Gasolina</string>
    <string name="desc_app">Saiba a melhor opcao para o abastecimento do seu carro</string>
    <string name="hint_preco_alcool">Preço Alcool  Ex.:1,90</string>
    <string name="hint_preco_gasolina">Preço Gasolina  Ex.:2,90</string>
    <string name="text_button">Calcular</string>
    <string name="text_result">Resuldado</string>
    <string name="image_desc">Imagem da logo</string>
</resources>
