<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_imagem_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/main_desc_app"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/desc_app"
        android:textAlignment="center"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="@id/main_imagem_logo"
        app:layout_constraintStart_toStartOf="@id/main_imagem_logo"
        app:layout_constraintTop_toBottomOf="@id/main_imagem_logo" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/main_layout_preco_alcool"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@id/main_imagem_logo"
        app:layout_constraintStart_toStartOf="@id/main_imagem_logo"
        app:layout_constraintTop_toBottomOf="@id/main_desc_app">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/main_edit_preco_alcool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_preco_alcool"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/main_layout_preco_gasolina"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@id/main_imagem_logo"
        app:layout_constraintStart_toStartOf="@id/main_imagem_logo"
        app:layout_constraintTop_toBottomOf="@id/main_layout_preco_alcool">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/main_edit_preco_gasolina"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_preco_gasolina" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/main_button_calc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_button"
        android:layout_marginTop="10dp"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@id/main_layout_preco_gasolina"
        app:layout_constraintEnd_toEndOf="@id/main_layout_preco_gasolina"
        app:layout_constraintTop_toBottomOf="@id/main_layout_preco_gasolina"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textAlignment="center"
        tools:text="@string/text_result"
        app:layout_constraintTop_toBottomOf="@id/main_button_calc"
        app:layout_constraintStart_toStartOf="@id/main_button_calc"
        app:layout_constraintEnd_toEndOf="@id/main_button_calc"/>

</android.support.constraint.ConstraintLayout>